# agx_arm_gzsim

./: AGENTS.md  CMakeLists.txt  README.md  package.xml
config/: initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sim.rviz
launch/: piper_with_gripper_gzsim.launch.py  piper_with_gripper_moveit_gzsim.launch.py
urdf/: piper_gzsim.ros2_control.xacro  piper_with_gripper_gzsim.urdf.xacro
worlds/: empty.sdf
