<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agx_arm_gzsim</name>
  <version>0.1.0</version>
  <description>
    Gazebo Harmonic simulation for the Piper 6-DOF arm with gripper.
    Supports standalone Gazebo visualization and MoveIt motion planning.
  </description>
  <maintainer email="maintainer@agilexrobotics.com">Agilex Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Robot description / URDF -->
  <exec_depend>agx_arm_description</exec_depend>

  <!-- MoveIt config (SRDF, kinematics, joint limits) -->
  <exec_depend>piper_with_gripper_moveit</exec_depend>

  <!-- Core ROS2 nodes -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- ros2_control controllers -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <!-- Gazebo Harmonic / gz_ros2_control -->
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- MoveIt -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
